<resources>
    <string name="app_name" translatable="false"        >Playlist maker</string>
    <string name="media_lib"                            >Медиатека</string>
    <string name="settings"                             >Настройки</string>
    <string name="search"                               >Поиск</string>
    <string name="night_theme"                          >Темная тема</string>
    <string name="share_app"                            >Поделиться приложением</string>
    <string name="support"                              >Написать в поддержку</string>
    <string name="terms_of_use"                         >Пользовательское соглашение</string>
    <string name="yes" translatable="false"             >Да</string>
    <string name="no" translatable="false"              >Нет</string>
    <string name="question" translatable="false"        >Вопрос</string>
    <string name="input_clearing" translatable="false"  >Очистить строку поиска</string>
    <string name="theme_email" translatable="false"     >Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_message" translatable="false"   >Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="picture_of_album" translatable="false">Picture of album</string>
    <string name="empty" translatable="false" />
    <string name="go_to" translatable="false"           >Go to</string>
    <string name="agreement"                            >Соглашение</string>
    <string name="empty_list"                           >Ничего не нашлось</string>
    <string name="error"                                >Проблемы со связью\n \nЗагрузка не удалась. Проверьте\nподключение к интернету</string>
    <string name="refresh"                              >Обновить</string>
    <string name="search_history"                       >Вы искали</string>
    <string name="clear_history"                        >Очистить историю</string>
    <string name="timer" translatable="false"           >00:00</string>
    <string name="duration"                             >Длительность</string>
    <string name="album"                                >Альбом</string>
    <string name="year"                                 >Год</string>
    <string name="genre"                                >Жанр</string>
    <string name="country"                              >Страна</string>
    <string name="play"                                 >Проигрывать песню</string>
    <string name="button_like"                          >Кнопка нравится</string>
    <string name="button_add"                           >Кнопка добавить</string>
    <string name="loading"                              >Всё ещё загружается …</string>
    <string name="server_error"                         >Ошибка сервера</string>
    <string name="new_playlist"                         >Новый плейлист</string>
    <string name="create_playlist"                      >Вы не создали\nни одного плейлиста</string>
    <string name="empty_library"                        >Ваша медиатека пуста</string>
    <string name="favorite_tracks"                      >Избранные треки</string>
    <string name="playlists"                            >Плейлисты</string>
    <string name="check_network"                        >Проверьте соединение с сетью!</string>
    <string name="album_name"                           >Hазвание*</string>
    <string name="album_description"                    >Описание</string>
    <string name="create"                               >Создать</string>
    <string name="queryTitle"                           >Завершить создание плэйлиста?</string>
    <string name="data_will_be_lost"                    >Все несохраненные данные будут потеряны</string>
    <string name="cancel"                               >Отмена</string>
    <string name="finish"                               >Завершить</string>
    <string name="album_created"                        >Плейлист %s создан</string>
    <string name="add_to_playlist"                      >Добавить в плейлист</string>
    <string name="create_album"                         >Новый плейлист</string>
    <string name="added_to_album"                       >Добавлено в плейлист %s</string>
    <string name="track_exist"                          >Трек уже добавлен в плейлист %s</string>
    <string name="delete_track"                         >Хотите удалить трек?</string>
    <string name="share"                                >Поделиться</string>
    <string name="change"                               >Редактировать информацию</string>
    <string name="remove_list"                          >Удалить плейлист</string>
    <string name="nothing_to_share"                     >В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="remove_album"                         >Хотите удалить плейлист?</string>
    <string name="save"                                 >Сохранить</string>
    <string name="edit"                                 >Редактировать</string>
    <string name="no_tracks"                            >В плейлисте нет треков</string>

    <plurals name="minutes">
        <item quantity="zero">%1$d минут</item>
        <item quantity="one">%1$d минута</item>
        <item quantity="two">%1$d минуты</item>
        <item quantity="few">%1$d минуты</item>
        <item quantity="many">%1$d минут</item>
        <item quantity="other">%1$d минут</item>
    </plurals>

    <plurals name="count" >
        <item quantity="zero">%1$d треков</item>
        <item quantity="one">%1$d трек</item>
        <item quantity="two">%1$d трека</item>
        <item quantity="few">%1$d трека</item>
        <item quantity="many">%1$d треков</item>
        <item quantity="other">%1$d треков</item>
    </plurals>

</resources>