<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/size_16dp"
    android:background="?attr/background">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/app_name"
        android:fontFamily="@font/ys_display_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/size_22sp" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_search"
            style="@style/button"
            android:text="@string/search"
            app:icon="@drawable/ic_magnifying_glass" />
        <Button
            android:id="@+id/btn_media"
            style="@style/button"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/media_lib"
            app:icon="@drawable/ic_media_lib" />
        <Button
            android:id="@+id/btn_settings"
            style="@style/button"
            android:layout_marginTop="@dimen/size_16dp"
            android:text="@string/settings"
            app:icon="@drawable/ic_gearwheel" />
    </LinearLayout>
</LinearLayout>