<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/size_16dp"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="40dp">
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:contentDescription="@string/app_name"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_array_back" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/settings"
            android:textSize="@dimen/size_22sp"
            android:layout_marginStart="64dp"
            android:textColor="@color/black"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/night_theme"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16sp"
            android:fontFamily="@font/ys_display_regular"/>
        <ImageView
            android:layout_width="35dp"
            android:layout_height="18dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_switch"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16sp"
            android:fontFamily="@font/ys_display_regular"/>
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_share"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/support"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16sp"
            android:fontFamily="@font/ys_display_regular"/>
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_head"
            android:layout_gravity="end"/>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/size_21dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/terms_of_use"
            android:textColor="@color/black"
            android:textSize="@dimen/size_16sp"
            android:fontFamily="@font/ys_display_regular"/>
        <ImageView
            android:layout_width="@dimen/size_24dp"
            android:layout_height="@dimen/size_24dp"
            android:contentDescription="@string/app_name"
            android:background="@drawable/ic_array_go_to"
            android:layout_gravity="end"/>
    </FrameLayout>


</LinearLayout>