<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".screens.player.activity.PlayerActivity">

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="image"
        app:barrierDirection="bottom"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_24dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_16dp" />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_24dp" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/back_btn"
        android:theme="@style/BaseRipple"
        style="@style/toolbar"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/image"
        app:layout_constraintVertical_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="@dimen/size_5dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintDimensionRatio="w,1:1"
        app:srcCompat="@drawable/player_placeholder"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintTop_toBottomOf="@id/back_btn"
        app:layout_constraintBottom_toTopOf="@id/barrier" />

    <TextView
        android:id="@+id/txt_track"
        style="@style/text_for_player_left"
        android:layout_marginTop="@dimen/size_16dp"
        android:textSize="@dimen/text_size_22sp"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constrainedWidth="true"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toBottomOf="@id/barrier"
        app:layout_constraintBottom_toTopOf="@id/txt_artist"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:text="The Beatles"/>

    <TextView
        android:id="@+id/txt_artist"
        style="@style/text_for_player_left"
        android:layout_marginTop="0dp"
        android:textSize="@dimen/text_size_14sp"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constrainedWidth="true"
        app:layout_constraintTop_toBottomOf="@id/txt_track"
        app:layout_constraintBottom_toTopOf="@id/btn_play"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        tools:text="Yesterday (Remastered 2009)"/>

    <ImageButton
        android:id="@+id/btn_add"
        android:layout_width="@dimen/size_50dp"
        android:layout_height="@dimen/size_50dp"
        android:background="@null"
        android:src="@drawable/player_add"
        android:contentDescription="@string/button_add"
        app:layout_constraintTop_toTopOf="@+id/btn_play"
        app:layout_constraintBottom_toBottomOf="@id/btn_play"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintEnd_toStartOf="@id/btn_play"
        app:layout_constraintHorizontal_chainStyle="spread_inside"/>

    <ImageButton
        android:id="@+id/btn_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_16dp"
        android:background="@null"
        android:src="@drawable/player_play"
        android:contentDescription="@string/play"
        app:layout_constraintTop_toBottomOf="@id/txt_artist"
        app:layout_constraintStart_toEndOf="@id/btn_add"
        app:layout_constraintEnd_toStartOf="@id/btn_like"
        app:layout_constraintBottom_toTopOf="@id/current_time"/>

    <ImageButton
        android:id="@+id/btn_like"
        android:layout_width="@dimen/size_50dp"
        android:layout_height="@dimen/size_50dp"
        android:background="@null"
        android:src="@drawable/player_dislike"
        android:contentDescription="@string/button_like"
        app:layout_constraintTop_toTopOf="@id/btn_play"
        app:layout_constraintBottom_toBottomOf="@id/btn_play"
        app:layout_constraintStart_toEndOf="@id/btn_play"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"/>

    <TextView
        android:id="@+id/current_time"
        style="@style/text_for_player_left"
        android:layout_marginTop="@dimen/size_5dp"
        android:text="@string/timer"
        android:textSize="@dimen/text_size_14sp"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.5"
        android:textColor="?attr/colorPrimaryVariant"
        app:layout_constraintTop_toBottomOf="@id/btn_play"
        app:layout_constraintBottom_toBottomOf="@id/txt_duration_left"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_24" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:constraint_referenced_ids="txt_duration_left"
        app:barrierDirection="end"/>

    <TextView
        android:id="@+id/txt_duration_left"
        style="@style/text_for_player_left"
        android:text="@string/duration"
        android:layout_marginTop="@dimen/size_16dp"
        app:layout_constraintTop_toBottomOf="@id/current_time"
        app:layout_constraintBottom_toTopOf="@id/txt_album_left"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintEnd_toStartOf="@id/barrier_end" />

    <TextView
        android:id="@+id/txt_album_left"
        style="@style/text_for_player_left"
        android:text="@string/album"
        app:layout_constraintTop_toBottomOf="@id/txt_duration_left"
        app:layout_constraintBottom_toTopOf="@id/txt_year_left"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintEnd_toEndOf="@id/barrier_end" />

    <TextView
        android:id="@+id/txt_year_left"
        style="@style/text_for_player_left"
        android:text="@string/year"
        app:layout_constraintTop_toBottomOf="@id/txt_album_left"
        app:layout_constraintBottom_toTopOf="@id/txt_style_left"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintEnd_toEndOf="@id/barrier_end" />

    <TextView
        android:id="@+id/txt_style_left"
        style="@style/text_for_player_left"
        android:text="@string/genre"
        app:layout_constraintTop_toBottomOf="@id/txt_year_left"
        app:layout_constraintBottom_toTopOf="@id/txt_country_left"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintEnd_toEndOf="@id/barrier_end" />

    <TextView
        android:id="@+id/txt_country_left"
        style="@style/text_for_player_left"
        android:text="@string/country"
        android:layout_marginBottom="@dimen/size_12dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/left_guideline_16"
        app:layout_constraintTop_toBottomOf="@id/txt_style_left"
        app:layout_constraintEnd_toEndOf="@id/barrier_end" />

    <TextView
        android:id="@+id/txt_duration_right"
        style="@style/text_for_player_right"
        app:layout_constraintStart_toEndOf="@id/barrier_end"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_duration_left"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        tools:text="5:35" />

    <TextView
        android:id="@+id/txt_album_right"
        style="@style/text_for_player_right"
        app:layout_constraintStart_toEndOf="@id/barrier_end"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_album_left"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        tools:text="Yesterday (Remastered 2009)" />

    <TextView
        android:id="@+id/txt_year_right"
        style="@style/text_for_player_right"
        app:layout_constraintStart_toEndOf="@id/barrier_end"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_year_left"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        tools:text="1965" />

    <TextView
        android:id="@+id/txt_style_right"
        style="@style/text_for_player_right"
        app:layout_constraintStart_toEndOf="@id/barrier_end"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_style_left"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        tools:text="Rock" />

    <TextView
        android:id="@+id/txt_country_right"
        style="@style/text_for_player_right"
        app:layout_constraintStart_toEndOf="@id/barrier_end"
        app:layout_constraintBaseline_toBaselineOf="@id/txt_country_left"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_16"
        tools:text="Великобритания" />

</androidx.constraintlayout.widget.ConstraintLayout>