<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorSecondary"
    tools:context=".presentation.fragment.create.CreateFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        style="@style/toolbar"
        android:theme="@style/BaseRipple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_playlist"
        app:titleTextAppearance="@style/ya.medium" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/size_16dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline_24"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/size_16dp" />

    <ImageView
        android:id="@+id/frame_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/size_8dp"
        android:scaleType="fitCenter"
        android:backgroundTint="@android:color/transparent"
        android:src="@drawable/create_image"

        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintDimensionRatio="w,4:3"
        app:layout_constraintVertical_chainStyle="packed"

        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toTopOf="@id/album_name" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/album_name"
        style="@style/custom_edit"
        android:layout_marginTop="@dimen/size_16dp"
        android:hint="@string/album_name"

        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintTop_toBottomOf="@id/frame_image"
        app:layout_constraintBottom_toTopOf="@id/album_description">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/custom_edit"
            android:inputType="textCapSentences"
            android:imeOptions="actionNext"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/album_description"
        style="@style/custom_edit"
        android:layout_marginTop="@dimen/size_16dp"
        android:layout_marginBottom="@dimen/size_16dp"
        android:hint="@string/album_description"

        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"
        app:layout_constraintTop_toBottomOf="@id/album_name"
        app:layout_constraintBottom_toTopOf="@id/create">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/custom_edit"
            android:inputType="textCapSentences"
            android:imeOptions="actionDone"/>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create"
        android:layout_width="@dimen/size_0dp"
        android:layout_height="@dimen/size_44dp"
        android:background="@drawable/shape_playlist_btn"
        android:layout_marginBottom="@dimen/size_38dp"
        android:fontFamily="@font/ys_display_medium"
        android:text="@string/create"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_16sp"
        android:enabled="false"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/right_guideline_24"
        app:layout_constraintStart_toStartOf="@id/left_guideline_24"/>

</androidx.constraintlayout.widget.ConstraintLayout>